<resources>
    <string name="app_name">Poshan</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Enter Password </string>
    <string name="action_log_in">Log In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="log_in_as_admin">Log In as Admin</string>
    <string name="log_in_as_mtc">Log In as MTC</string>
    <string name="log_in_as_ls">Log In As LS</string>
    <string name="title_activity_lsmain">Center Details</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>
    <string name="child_name">Child Name</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="mother_s_name">Mother\'s Name</string>
    <string name="age_in_months">Age(in months)</string>
    <string name="phone_number">Phone Number</string>
    <string name="weight_in_kg">Weight(in Kg)</string>
    <string name="height_in_cm">Height(in cm)</string>
    <string name="district">District</string>
    <string name="block">Block</string>
    <string name="gram_panchayat">Gram Panchayat</string>
    <string name="address">Address</string>
    <string name="how_many_times_visited_their_parents">How many times visited their parents ...??</string>
    <string name="enter_summary">Enter Summary</string>

    <string-array name="gender_spinner">
        <item>Select a gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="mtc_center_analysis">MTC Center Analysis</string>
    <string name="ls_details">LS Details</string>
    <string name="mtc_centers">MTC Centers</string>
    <string name="title_activity_mtcmain">MTCMainActivity</string>
    <string name="waiting_list">Waiting List</string>
    <string name="update_daily_details">Update Daily Details</string>
    <string name="enter_adhaar_no">Enter Adhaar No.</string>
    <string name="name">Name :</string>
    <string name="enter_aadhar_no">Enter Aadhar No.</string>
    <string name="add_ls">Add LS</string>
    <string name="add_mtc">Add MTC</string>
</resources>
