<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mtc_center_analysis"
            android:title="@string/mtc_center_analysis" />
        <item
            android:id="@+id/nav_ls_details"
            android:title="@string/ls_details" />
        <item
            android:id="@+id/nav_mtc_centers"
            android:title="@string/mtc_centers" />
        <item
            android:id="@+id/nav_add_mtc_center"
            android:title="Add MTC center"
            />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_admin_profile"
                android:title="Profile" />
            <item
                android:id="@+id/nav_admin_logout"
                android:title="Logout" />
        </menu>
    </item>

</menu>
