<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="8dp"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

    >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/edt_txt_ls_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:autofillHints="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edt_txt_ls_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_ls_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_log_in"
                android:background="@drawable/ic_rounded_background"/>

            <RelativeLayout
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
              >

                <TextView
                    android:id="@+id/txt_view_login_as_admin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/log_in_as_admin"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/txt_view_login_as_mtc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/log_in_as_mtc"
                    android:textColor="@color/colorPrimary" />


            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

